# ora2mqtt-python

./: .gitignore  AGENTS.md  API.md  CHANGELOG.md  DEV_NOTES.md  Makefile  README.md  hacs.json  pyproject.toml  requirements.txt  ruff.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: validate.yml
custom_components/ora/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  device_tracker.py  manifest.json  privacy.py  sensor.py
custom_components/ora/api/: __init__.py  auth.py  cert.py  client.py  vehicles.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  api_responses.py  certificates.py
tests/integration/: __init__.py  test_api_auth.py  test_api_client.py  test_api_vehicles.py  test_cert.py  test_const.py  test_init.py  test_manifest.py  test_privacy.py
tests/system/: __init__.py  test_config_flow.py  test_config_flow_e2e.py  test_coordinator.py  test_entities.py  test_init.py  test_integration.py  test_ssl_executor.py
