[project]
name = "ora"
version = "1.0.0"
requires_python = ">=3.12"
authors = [{name = "FunCyRanger"}]
dependencies = [
    "aiohttp>=3.10.0",
    "pycryptodome>=3.20.0",
]

[project.scripts]
ora = "ora.__main__:main"

[tool.uv]
dev-dependencies = [
    "aioresponses>=0.7.8",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-homeassistant-custom-component>=0.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "integration: Integration tests (unit tests for components)",
    "system: System tests (full integration tests)",
    "asyncio: Async tests",
]

[tool.coverage.run]
source = ["custom_components/ora"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
